--- a/index.html
+++ b/index.html
@@ -6,9 +6,31 @@
     </head>
     <body>
         <header>
-            <h1>Run Buddy</h1>
+            <h1>
+               <a href="/">RUN BUDDY</a>
+            </h1>
+            <nav>
+                <!--Unorded list element-->
+                <ul>
+                    <li>
+                        <a href="#what-we-do">What We Do</a>
+                    </li>
+
+                    <li>
+                        <a href="#what-yo-do">What You Do</a>
+                    </li>
+
+                    <li>
+                        <a href="#your-trainers">Your Trainers</a>
+                    </li>
+
+                    <li>
+                        <a href="#reach-out">Reach Out</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
-        
+
         <!--hero/jumbotron-->
         <section>
 
