--- a/index.html
+++ b/index.html
@@ -32,20 +32,22 @@
             </nav>
         </header>
 
-        <section>
-            <div>
+        <!--hero/jumbotron-->
+
+        <section class="hero">
+            <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
 
                 <form>
                     <label for="name">Enter full name:</label>
-                    <input type="text" placeholder="Your Name" name="name" id="name"/>
+                    <input class="form-input" type="text" placeholder="Your Name" name="name" id="name"/>
 
                     <label for="email address">Enter email address:</label>
-                    <input type="email" placeholder="Email Address" name="email address" id="email address" />
+                    <input class="form-input" type="email" placeholder="Email Address" name="email address" id="email address" />
 
                     <label for="phone number">Enter a telephone number:</label>
-                    <input type="tel" placeholder="Phone Number" name="phone number" id="phone number" />
+                    <input class="form-input" type="tel" placeholder="Phone Number" name="phone number" id="phone number" />
 
                     <p>
                         Have you worked out with a trainer before?
@@ -66,12 +68,7 @@
                 </form>  
            </div>  
         </section>
-
-        <!--hero/jumbotron-->
-        <section>
-
-        </section>
-
+        
         <!--"what we do" section-->
         <section>
             <h2>What We Do</h2>
