--- a/index.html
+++ b/index.html
@@ -107,10 +107,49 @@
          </section>
 
         <!--"meet the trainers" section-->
-        <section id="your-trainers">
-            <h2>Meet the Trainers</h2>    
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">
+                Meet the Trainers
+            </h2>
+
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                </p>
+                </div>
+            </article>
+
+            <!--second trainer bio-->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, expedita esse minus quas earum ullam dolores sint officia. Officia architecto facilis eligendi non amet sed expedita, sit provident veritatis porro.
+                    </p>
+
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+
+            <!--Third trainer bio-->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi eveniet, maxime sint eos, iste corrupti consequatur veniam nostrum maiores illum vel facilis molestias ut dolore eius beatae quas officia amet.
+                    </p>
+
+                </div>
+            </article>
         </section>
-        
         <!--"reach out" section-->
         <section id="reach-out">
             <h2>Reach Out</h2>
