--- a/index.html
+++ b/index.html
@@ -151,13 +151,11 @@
             </article>
         </section>
         <!--"reach out" section-->
-        <section id="reach-out">
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.4662728640865!2d-81.29196478457048!3d28.555758082448193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e765a205456943%3A0x12ac386ca34fe646!2s7542%20Sun%20Tree%20Cir%2C%20Azalea%20Park%2C%20FL%2032807!5e0!3m2!1ses!2sus!4v1670676862752!5m2!1ses!2sus" 
-                    width="400"
-                    height="400" 
                     style="border:0;" 
                     allowfullscreen="" 
                     loading="lazy" 
